# souslevent

./: .env.example  .gitignore  CLAUDE.md  INSTALL.md  LICENSE  README.md  github-recovery-codes.txt  pyproject.toml
docs/: 00_project_overview.md  01_theory_and_physics.md  02_architecture.md  03_decisions.md  04_data_sources.md  05_windninja_integration.md  06_dev_log.md  07_roadmap.md  08_glossary.md  09_avancement_champsaur.md  10_auto_pipeline.md
docs/support/: environment.md  meteofrance_arome.md  troubleshooting.md
packaging/: README.md  souslevent.spec
prompts/: coding_agent_brief.md  context_primer.md
scripts/: build_release.py  champsaur_map.py  champsaur_pass1_hourly.py  champsaur_pass1_mass.py  demo_pass1.py  demo_pass2_single.py  pass2_smoke_test.py  prepare_champsaur_ign.py  sillage_auto.py  sillage_gui.py  souslevent.py
site/: index.html
src/sillage/: __init__.py  areas.py  config.py  timing.py
src/sillage/app/: __init__.py  jobs.py  main_window.py  map_tab.py  qt_image.py
src/sillage/auto/: __init__.py  arome.py  partition.py  pipeline.py  progress.py  scene.py  store.py  wind.py  window.py
src/sillage/flow/: __init__.py  openfoam_reader.py  windninja.py
src/sillage/screening/: __init__.py  indicator.py  pass1.py  subzones.py
src/sillage/souslevent/: __init__.py  window.py
src/sillage/terrain/: __init__.py  acquire.py  dem.py  geometry.py
src/sillage/viz/: __init__.py  map2d.py  volume3d.py
src/sillage/wind/: __init__.py  directions.py  forecast.py  meteofrance.py  profile.py
tests/: test_auto.py  test_champsaur_ign.py  test_champsaur_pass1_mass.py  test_meteofrance.py  test_pass2.py  test_screening.py  test_subzones.py  test_terrain.py
