[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "souslevent"
version = "1.0.0"
description = "SousLeVent: leeward turbulence / rotor mapping for mountain paragliding."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Pierre-Jacques Font" }]
keywords = ["paragliding", "wind", "cfd", "windninja", "openfoam", "terrain", "mountain", "rotor"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Intended Audience :: End Users/Desktop",
]

# SousLeVent is a desktop GUI product, so the Qt/VTK/basemap stack ships in the BASE install
# (`pip install souslevent` must give a working `souslevent` command — not a broken entry point).
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "rasterio>=1.3",   # DEM IO (GDAL-backed)
  "pyproj>=3.6",     # reprojection to UTM north-up
  "requests>=2.31",  # weather APIs (Open-Meteo / AROME)
  "pyvista>=0.43",   # OpenFOAM case reading + 3D rendering (VTK-backed)
  "pyvistaqt>=0.11", # embedded VTK viewport in Qt (ADR-0009)
  "PySide6>=6.6",    # desktop IHM (ADR-0009)
  "superqt>=0.6",    # QRangeSlider for the flight-window selection
  "contextily>=1.5", # basemap tiles (IGN / OSM) + terrarium DEM (ADR-0010/0013)
  "matplotlib>=3.8", # first-pass 2D screening map
  "click>=8.1",      # CLI for demo scripts
  "python-dotenv>=1.0", # load .env into config (paths, API keys)
  "py7zr>=1.1",      # read/extract IGN RGE ALTI .7z archives
  "tzdata>=2024.1",  # IANA tz database for zoneinfo (Europe/Paris hourly labels on Windows)
  "psutil>=5.9",     # detect physical CPU cores for the auto-mode concurrency slider
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "build>=1.2", "wheel>=0.43", "pyinstaller>=6.6"]
gui = []  # back-compat alias: GUI deps are now in the base install (see above)
# Optional integrations, added as they land:
# arome = []      # Meteo-France AROME client deps
# era5  = ["cdsapi>=0.6"]  # reanalysis validation/hindcast

# One published console command → the packaged unified app (works from a wheel; scripts/ is NOT a
# distributed package). The two legacy apps stay runnable locally via `python scripts/sillage_*.py`.
[project.scripts]
souslevent = "sillage.souslevent.window:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
